tests/positive/ownership_return.safe
-- Test: ownership_return
-- Description: Returning ownership from a local owner.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p96a:0eaf48aa
-- Expected: ACCEPT

package ownership_Return

   type payload is range 0 to 100;
   type payload_Ptr is access payload;

   function build returns payload_Ptr
      Source : payload_Ptr = new (42 as payload);

      return Source;


   function use_Return
      Target : payload_Ptr = null;

      Target = build ();



