tests/negative/neg_own_use_after_move.safe
-- Test: neg_own_use_after_move
-- Description: Using (reading) an access value after it has been moved.
--   The source variable is read after ownership transfer, violating
--   the post-move dereference rule.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p96c:0b45de01
-- Expected: REJECT use_after_move

package use_After_Move_Test

   type item is record
      id    : natural;
      count : natural;


   type item_Ptr is access item;

   --  Read_After_Move: reads Source.all after moving Source to Target.
   function read_After_Move
      Source : item_Ptr = new ((id = 1, count = 10) as item);
      Target : item_Ptr = null;
      v      : natural;

      Target = Source;
      --  Source is now moved (null).
      v = Source.count;  -- ERROR: dereference of moved variable



